# modern-fastapi

./: .gitignore  .pre-commit-config.yaml  Readme.md  pyproject.toml
src/: auth.py  main.py
src/data/: creature.py  explorer.py  init.py  user.py
src/fake/: creature.py  explorer.py  user.py
src/model/: user.py
src/service/: creature.py  explorer.py  user.py
src/test/unit/data/: test_creature.py
src/test/unit/service/: test_creature.py
src/web/: creature.py  explorer.py  user.py
