[project]
name = "modern-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "pinstinct",email = "contact@limhm.dev"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
